--- a/Kubernetes/Kub-Best-practices.ipynb/Monitor-Logging.ipynb
+++ b/Kubernetes/Kub-Best-practices.ipynb/Monitor-Logging.ipynb
@@ -60,7 +60,70 @@
     "\n",
     "- R—Rate\n",
     "- E—Errors\n",
-    "- D—Duration"
+    "- D—Duration\n",
+    "\n",
+    "#### The philosophy was taken from Google’s Four Golden Signals:\n",
+    "\n",
+    "#### Latency\n",
+    "- How long it takes to serve a request\n",
+    "\n",
+    "#### Traffic\n",
+    "- How much demand is placed on your system\n",
+    "\n",
+    "#### Errors\n",
+    "- The rate of requests that are failing\n",
+    "\n",
+    "#### Saturation\n",
+    "- How utilized your service is\n",
+    "\n",
+    "#### As an example, you could use this method to monitor a frontend service running in Kubernetes to calculate the following:\n",
+    "\n",
+    "- How many requests is my frontend service processing?\n",
+    "- How many 500 errors are users of the service receiving?\n",
+    "- Is the service overutilized by requests?\n",
+    "\n",
+    "#### The USE and RED methods are complementary given that the USE method focuses on the infrastructure components and the RED method focuses on monitoring the end-user experience for the application.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Kubernetes Metrics Overview\n",
+    "#### Now that we know the different monitoring techniques and patterns, let’s look at what components you should be monitoring in your Kubernetes cluster. A Kubernetes cluster consists of control-plane components and node components. The control-plane components consist of the API server, etcd, scheduler, and controller manager. The nodes consist of the kubelet, container runtime, kube-proxy, kube-dns, and pods. You need to monitor all these components to ensure a healthy cluster and application.\n",
+    "\n",
+    "## cAdvisor\n",
+    "\n",
+    "#### Container Advisor, or cAdvisor, is an open source project that collects resources and metrics for containers running on a node. cAdvisor is built into the Kubernetes kubelet, which runs on every node in the cluster. It collects memory and CPU metrics through the Linux control group (cgroup) tree. If you are not familiar with cgroups, it’s a Linux kernel feature that allows isolation of resources for CPU, disk I/O, or network I/O. cAdvisor will also collect disk metrics through statfs, which is built into the Linux kernel. These are implementation details you don’t really need to worry about, but you should understand how these metrics are exposed and the type of information you can collect. You should consider cAdvisor as the source of truth for all container metrics.\n",
+    "\n",
+    "## Metrics Server\n",
+    "\n",
+    "#### First, the canonical implementation of the Resource Metrics API is the metrics server. The metrics server gathers resource metrics such as CPU and memory. It gathers these metrics from the kubelet’s API and then stores them in memory. Kubernetes uses these resource metrics in the scheduler, Horizontal Pod Autoscaler (HPA), and Vertical Pod Autoscaler (VPA).\n",
+    "\n",
+    "#### Second, the Custom Metrics API allows monitoring systems to collect arbitrary metrics. This allows monitoring solutions to build custom adapters that will allow for extending outside the core resource metrics. For example, Prometheus built one of the first custom metrics adapters, which allows you to use the HPA based on a custom metric. This opens up better scaling based on your use case because now you can bring in metrics like queue size and scale based on a metric that might be external to Kubernetes.\n",
+    "\n",
+    "## kube-state-metrics\n",
+    "#### kube-state-metrics is a Kubernetes add-on that monitors the object stored in Kubernetes. Where cAdvisor and Metrics Server are used to provide detailed metrics on resource usage, kube-state-metrics is focused on identifying conditions on Kubernetes objects deployed to your cluster.\n",
+    "\n",
+    "#### Pods\n",
+    "- How many pods are deployed to the cluster?\n",
+    "- How many pods are in a pending state?\n",
+    "- Are there enough resources to serve a pods request?\n",
+    "\n",
+    "#### Deployments\n",
+    "- How many pods are in a running state versus a desired state?\n",
+    "- How many replicas are available?\n",
+    "- What deployments have been updated?\n",
+    "\n",
+    "#### Nodes\n",
+    "- What’s the status of my nodes?\n",
+    "- What are the allottable CPU cores in my cluster?\n",
+    "- Are there any nodes that are unschedulable?\n",
+    "\n",
+    "#### Jobs\n",
+    "- When did a job start?\n",
+    "- When did a job complete?\n",
+    "- How many jobs failed?"
    ]
   },
   {
