added new nodes

--- a/Kubernetes/Kub-Best-practices.ipynb/Monitor-Logging.ipynb
+++ b/Kubernetes/Kub-Best-practices.ipynb/Monitor-Logging.ipynb
@@ -129,6 +129,47 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## What Metrics Do I Monitor?\n",
+    "#### The easy answer is “everything,” but if you try to monitor too much, you can create noise that filters out the real signals into which you need to have insight. When we think about monitoring in Kubernetes, we want a layered approach that takes into account the following:\n",
+    "\n",
+    "- Physical or virtual nodes\n",
+    "- Cluster components\n",
+    "- Cluster add-ons\n",
+    "- End-user applications"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Using this layered approach to monitoring allows you to more easily identify the correct signals in your monitoring system. It allows you to approach issues in a more targeted way. For example, if you have pods going into a pending state, you can start with resource utilization of the nodes, and if all is OK, you can target cluster-level components.\n",
+    "\n",
+    "#### Following are metrics you would want to target in your system:\n",
+    "\n",
+    "#### Nodes\n",
+    "- CPU utilization\n",
+    "- Memory utilization\n",
+    "- Network utilization\n",
+    "- Disk utilization\n",
+    "\n",
+    "#### Cluster components\n",
+    "- etcd latency\n",
+    "\n",
+    "#### Cluster add-ons\n",
+    "- Cluster Autoscaler\n",
+    "- Ingress controller\n",
+    "\n",
+    "#### Application\n",
+    "- Container memory utilization and saturation\n",
+    "- Container CPU utilization\n",
+    "- Container network utilization and error rate\n",
+    "- Application framework–specific metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
