added new notes

--- a/Kubernetes/Kub-Best-practices.ipynb/CI-CD-Principles.ipynb
+++ b/Kubernetes/Kub-Best-practices.ipynb/CI-CD-Principles.ipynb
@@ -28,7 +28,70 @@
     "\n",
     "- Rolling updates\n",
     "- Blue/green deployments\n",
-    "- Canary deployments"
+    "- Canary deployments\n",
+    "\n",
+    "#### Rolling updates are built into Kubernetes and allow you to trigger an update to the currently running application without downtime. For example, if you took your frontend app that is currently running frontend:v1 and updated the Deployment to frontend:v2, Kubernetes would update the replicas in a rolling fashion to frontend:v2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "kind: Deployment\n",
+    "apiVersion: apps/v1\n",
+    "metadata:\n",
+    "  name: frontend\n",
+    "  labels:\n",
+    "    app: frontend\n",
+    "spec:\n",
+    "  replicas: 3\n",
+    "  selector:\n",
+    "    matchLabels:\n",
+    "      app: frontend\n",
+    "  template:\n",
+    "    metadata:\n",
+    "      labels:\n",
+    "        app: frontend\n",
+    "    spec:\n",
+    "      containers:\n",
+    "      - name: frontend\n",
+    "        image: brendanburns/frontend:v1\n",
+    "  strategy:\n",
+    "    type: RollingUpdate\n",
+    "    rollingUpdate:\n",
+    "      maxSurge: 1 # Maximum amount of replicas to update at one time\n",
+    "      maxUnavailable: 1 # Maximum amount of replicas unavailable during rollout"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Blue/green deployments allow you to release your application predictably. With blue/green deployments, you control when the traffic is shifted over to the new environment, so it gives you a lot of control over the rollout of a new version of your application. With blue/green deployments, you are required to have the capacity to deploy both the existing and new environment at the same time. These types of deployments have a lot of advantages, such as easily switching back to your previous version of the application. There are some things that you need to consider with this deployment strategy, however:\n",
+    "\n",
+    "- Database migrations can become difficult with this deployment option because you need to consider in-flight transactions and schema update compatibility.\n",
+    "- There is the risk of accidental deletion of both environments.\n",
+    "- You need extra capacity for both environments.\n",
+    "- There are coordination issues for hybrid deployments in which legacy apps can’t handle the deployment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Canary deployments are very similar to blue/green deployments, but they give you much more control over shifting traffic to the new release. Most modern Ingress implementations will give you the ability to release a percentage of traffic to a new release, but you can also implement a service mesh technology, like Istio, Linkerd, or HashiCorp Consul, which gives you a number of features that help implement this deployment strategy.\n",
+    "\n",
+    "#### Canary deployments allow you to test new features for only a subset of users. For example, you might roll out a new version of an application and want to test the deployment for only 10% of your user base. This allows you to reduce the risk of a bad deployment or broken features to a much smaller subset of users. If there are no errors with the deployment or new features, you can begin shifting a greater percentage of traffic to the new version of the application. There are also more advanced techniques that you can use with canary deployments in which you release to only a specific region of users or only target users with a specific profile. These types of releases are often referred to as A/B or dark releases because users are unaware they are testing new feature deployments.\n",
+    "\n",
+    "- The ability to shift traffic to a percentage of users\n",
+    "- A firm knowledge of steady state to compare against a new release\n",
+    "- Metrics to understand whether the new release is in a “good” or “bad” state"
    ]
   },
   {
