added new notes

--- a/Kubernetes/Kub-Best-practices.ipynb/CI-CD-Principles.ipynb
+++ b/Kubernetes/Kub-Best-practices.ipynb/CI-CD-Principles.ipynb
@@ -91,13 +91,10 @@
     "\n",
     "- The ability to shift traffic to a percentage of users\n",
     "- A firm knowledge of steady state to compare against a new release\n",
-    "- Metrics to understand whether the new release is in a “good” or “bad” state"
+    "- Metrics to understand whether the new release is in a “good” or “bad” state\n",
+    "\n",
+    "#### having multiple versions of the application running at the same time. Your database schema needs to support both versions of the application. When using these strategies, you’ll need to focus on how to handle dependent services and having multiple versions running. This includes having strong API contracts and ensuring that your data services support the multiple versions you have deployed at the same time."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
