added new notes

--- a/Kubernetes/Kub-Best-practices.ipynb/CI-CD-Principles.ipynb
+++ b/Kubernetes/Kub-Best-practices.ipynb/CI-CD-Principles.ipynb
@@ -95,6 +95,28 @@
     "\n",
     "#### having multiple versions of the application running at the same time. Your database schema needs to support both versions of the application. When using these strategies, you’ll need to focus on how to handle dependent services and having multiple versions running. This includes having strong API contracts and ensuring that your data services support the multiple versions you have deployed at the same time."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### It’s extremely important that when you’re running experiments, you minimize the “blast radius” to ensure that the issues that might arise are minimal. You’ll also want to ensure that when you’re building experiments, you focus on automating them, given that running experiments can be labor intensive.\n",
+    "\n",
+    "#### By this point, you might be asking, “Why wouldn’t I just test in staging?” We find there are some inherent problems when testing in staging, such as the following:\n",
+    "\n",
+    "- Nonidentical deployment of resources.\n",
+    "- Configuration drift from production.\n",
+    "- Traffic and user behavior tend to be generated synthetically.\n",
+    "- The number of requests generated don’t mimic a real workload.\n",
+    "- Lack of monitoring implemented in staging.\n",
+    "- The data services deployed contain differing data and load than in production.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
