added new notes

--- a/Kubernetes/Kub-Best-practices.ipynb/CI-CD-Principles.ipynb
+++ b/Kubernetes/Kub-Best-practices.ipynb/CI-CD-Principles.ipynb
@@ -116,6 +116,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Best Practices for CI/CD\n",
+    "#### Your CI/CD pipeline won’t be perfect on day one, but consider some of the following best practices to iteratively improve on the pipeline:\n",
+    "\n",
+    "- With CI, focus on automation and providing quick builds. Optimizing the build speed will provide developers quick feedback if their changes have broken the build.\n",
+    "- Focus on providing reliable tests in your pipeline. This will give developers rapid feedback on issues with their code. The faster the feedback loop to developers, the more productive they’ll become in their workflow.\n",
+    "- When deciding on CI/CD tools, ensure that the tools allow you to define the pipeline as code. This will allow you to version-control the pipeline with your application code.\n",
+    "- Ensure that you optimize your images so that you can reduce the size of the image and also reduce the attack surface when running the image in production. Multistage Docker builds allow you to remove packages not needed for the application to run. For example, you might need Maven to build the application, but you don’t need it for the actual running image.\n",
+    "- Avoid using “latest” as an image tag, and utilize a tag that can be referenced back to the buildID or Git commit.\n",
+    "- If you are new to CD, utilize Kubernetes rolling updates to start. They are easy to use and will get you comfortable with deployment. As you become more comfortable and confident with CD, look at utilizing blue/green and canary deployment strategies.\n",
+    "- With CD, ensure that you test how client connections and database schema upgrades are handled in your application.\n",
+    "- Testing in production will help you build reliability into your application and ensure that you have good monitoring in place. With testing in production, also start at a small scale and limit the blast radius of the experiment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
