added new notes

--- a/Kubernetes/Kub-Best-practices.ipynb/Security.ipynb
+++ b/Kubernetes/Kub-Best-practices.ipynb/Security.ipynb
@@ -23,13 +23,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "###"
+    "#### OpenSSF Scorecard gives an automated set of tools that provide a 0–10 score on the security posture of an open source repository that you might be using or considering to use as a dependency. The aggregate score provides an at-a-glance view that can be used to evaluate how trustworthy an open source project is. Many prominent open source projects are adopting this scorecard."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Review operator API permissions and make sure that they follow least privilege.\n",
+    "- Configure the container build file to run application processes as a non-root user.\n",
+    "- Use container base images like scratch and distroless.\n",
+    "- Perform vulnerability scanning on your containers, and implement policy on whether to allow a container to be deployed based on these vulnerabilities.\n",
+    "- Review OpenSSF scorecards on open source projects that you depend on.\n",
+    "- Implement SLSA level 1 to provide baseline-level transparency and integrity for your software."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
