added new notes

--- a/Mathematics/Statistics/Think-Bayes/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Think-Bayes/Bayes-Theorem.ipynb
@@ -27,7 +27,33 @@
     "- P(B1|V) = P(B1) P(V|B1) / P(V)\n",
     "- P(B1) = 1/2\n",
     "- P(V | B1) = 30/40 = 3/4 = 0.75%\n",
-    "- P(V) = P(B1) * P(V|B1) + P(B2) * P(V|B2) = 5/8 or 0.63%"
+    "- P(V) = P(B1) * P(V|B1) + P(B2) * P(V|B2) = 5/8 or 0.63%\n",
+    "\n",
+    "#### Finally, we can apply Bayes’s theorem to compute the posterior probability of Bowl 1:\n",
+    "- P(B1 | V) = (1/2) (3/4) / (5/8) = 3/5\n",
+    "\n",
+    "#### This example demonstrates one use of Bayes’s theorem: it provides a way to get from P(B|A) to P(A |B). This strategy is useful in cases like this where it is easier to compute the terms on the right side than the term on the left."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Diachronic Bayes\n",
+    "\n",
+    "#### There is another way to think of Bayes’s theorem: it gives us a way to update the probability of a hypothesis, \n",
+    "H , given some body of data, D.\n",
+    "\n",
+    "#### This interpretation is “diachronic”, which means “related to change over time”; in this case, the probability of the hypotheses changes as we see new data.\n",
+    "\n",
+    "#### Rewriting Bayes’s theorem with H and D yields:\n",
+    "- P(H|D) = P(H) P(D|H) / P(D)\n",
+    "\n",
+    "#### In this interpretation, each term has a name:\n",
+    "- P(H) is the probability of the hypothesis before we see the data, called the prior probability, or just prior.\n",
+    "- P(H|D) is the probability of the hypothesis after we see the data, called the posterior.\n",
+    "- P(D|H) is the probability of the data under the hypothesis, called the likelihood.\n",
+    "- P(D) is the total probability of the data, under any hypothesis."
    ]
   },
   {
