added new notes

--- a/Mathematics/Statistics/Think-Bayes/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Think-Bayes/Bayes-Theorem.ipynb
@@ -59,6 +59,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### Most often we simplify things by specifying a set of hypotheses that are:\n",
+    "\n",
+    "- Mutually exclusive, which means that only one of them can be true\n",
+    "- Collectively exhaustive, which means one of them must be true.\n",
+    "\n",
+    "#### When these conditions apply, we can compute P(D) using the law of total probability. For example with two hypthesis, H1 and H2.\n",
+    "- P(D) = P(H1) P(D|H1) + P(H2) P(D|H2)\n",
+    "#### And more generally, with any number of hypotheses:\n",
+    "- P(D) = Summation- i P(Hi) P(D|Hi)\n",
+    "#### The process in this section, using data and a prior probability to compute a posterior probability, is called a Bayesian update."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
