added new notes

--- a/Mathematics/Statistics/Think-Bayes/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Think-Bayes/Bayes-Theorem.ipynb
@@ -283,7 +283,126 @@
    "metadata": {},
    "source": [
     "#### I call the result unnorm because these values are the “unnormalized posteriors”. Each of them is the product of a prior and a likelihood\n",
-    "- P(Bi) P(D|Bi)"
+    "- P(Bi) P(D|Bi)\n",
+    "#### which is the numerator of Bayes’s theorem. If we add them up, we have"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- P(B1) P(D|B1) + P(B2) P(B2) P(D|B2)\n",
+    "\n",
+    "#### which is the denominator of Bayes’s theorem, P(D)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### So we can compute the total probability of the data like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.625"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prob_data = table['unnorm'].sum()\n",
+    "prob_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### And we can compute the posterior probabilities like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prior</th>\n",
+       "      <th>likelihood</th>\n",
+       "      <th>unnorm</th>\n",
+       "      <th>posterior</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bowl 1</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.375</td>\n",
+       "      <td>0.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bowl 2</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.250</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        prior  likelihood  unnorm  posterior\n",
+       "Bowl 1    0.5        0.75   0.375        0.6\n",
+       "Bowl 2    0.5        0.50   0.250        0.4"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table['posterior'] = table['unnorm'] / prob_data\n",
+    "table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### When we add up the unnormalized posteriors and divide through, we force the posteriors to add up to 1. This process is called “normalization”, which is why the total probability of the data is also called the “normalizing constant”"
    ]
   },
   {
@@ -291,9 +410,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "####"
-   ]
+   "source": []
   }
  ],
  "metadata": {
