--- a/Mathematics/Statistics/Think-Bayes/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Think-Bayes/Bayes-Theorem.ipynb
@@ -291,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- P(B1) P(D|B1) + P(B2) P(B2) P(D|B2)\n",
+    "- P(B1) P(D|B1) + P(B2) P(D|B2)\n",
     "\n",
     "#### which is the denominator of Bayes’s theorem, P(D)"
    ]
@@ -403,6 +403,167 @@
    "metadata": {},
    "source": [
     "#### When we add up the unnormalized posteriors and divide through, we force the posteriors to add up to 1. This process is called “normalization”, which is why the total probability of the data is also called the “normalizing constant”"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prior</th>\n",
+       "      <th>likelihood</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1/3</td>\n",
+       "      <td>1/6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1/3</td>\n",
+       "      <td>1/8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1/3</td>\n",
+       "      <td>1/12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   prior likelihood\n",
+       "6    1/3        1/6\n",
+       "8    1/3        1/8\n",
+       "12   1/3       1/12"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table2 = pd.DataFrame(index=[6, 8, 12])\n",
+    "\n",
+    "from fractions import Fraction\n",
+    "\n",
+    "table2['prior'] = Fraction(1, 3)\n",
+    "table2['likelihood'] = Fraction(1, 6), Fraction(1, 8), Fraction(1, 12)\n",
+    "table2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update(table):\n",
+    "    \"\"\"Compute the posterior probabilities.\"\"\"\n",
+    "    table['unnorm'] = table['prior'] * table['likelihood']\n",
+    "    prob_data = table['unnorm'].sum()\n",
+    "    table['posterior'] = table['unnorm'] / prob_data\n",
+    "    return prob_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prior</th>\n",
+       "      <th>likelihood</th>\n",
+       "      <th>unnorm</th>\n",
+       "      <th>posterior</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1/3</td>\n",
+       "      <td>1/6</td>\n",
+       "      <td>1/18</td>\n",
+       "      <td>4/9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1/3</td>\n",
+       "      <td>1/8</td>\n",
+       "      <td>1/24</td>\n",
+       "      <td>1/3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1/3</td>\n",
+       "      <td>1/12</td>\n",
+       "      <td>1/36</td>\n",
+       "      <td>2/9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   prior likelihood unnorm posterior\n",
+       "6    1/3        1/6   1/18       4/9\n",
+       "8    1/3        1/8   1/24       1/3\n",
+       "12   1/3       1/12   1/36       2/9"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prob_data = update(table2)\n",
+    "table2"
    ]
   },
   {
