added new notes

--- a/Mathematics/Statistics/Think-Bayes/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Think-Bayes/Bayes-Theorem.ipynb
@@ -567,10 +567,257 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Monty Hall Problem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prior</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Door 1</th>\n",
+       "      <td>1/3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Door 2</th>\n",
+       "      <td>1/3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Door 3</th>\n",
+       "      <td>1/3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       prior\n",
+       "Door 1   1/3\n",
+       "Door 2   1/3\n",
+       "Door 3   1/3"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table3 = pd.DataFrame(index=['Door 1', 'Door 2', 'Door 3'])\n",
+    "table3['prior'] = Fraction(1, 3)\n",
+    "table3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- If the car is behind Door 1, Monty chooses Door 2 or 3 at random, so the probability he opens Door 3 is 1/2\n",
+    "- If the car is behind Door 2, Monty has to open Door 3, so the probability of the data under this hypothesis is 1.\n",
+    "- If the car is behind Door 3, Monty does not open it, so the probability of the data under this hypothesis is 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prior</th>\n",
+       "      <th>likelihood</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Door 1</th>\n",
+       "      <td>1/3</td>\n",
+       "      <td>1/2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Door 2</th>\n",
+       "      <td>1/3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Door 3</th>\n",
+       "      <td>1/3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       prior likelihood\n",
+       "Door 1   1/3        1/2\n",
+       "Door 2   1/3          1\n",
+       "Door 3   1/3          0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table3['likelihood'] = Fraction(1, 2), 1, 0\n",
+    "table3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prior</th>\n",
+       "      <th>likelihood</th>\n",
+       "      <th>unnorm</th>\n",
+       "      <th>posterior</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Door 1</th>\n",
+       "      <td>1/3</td>\n",
+       "      <td>1/2</td>\n",
+       "      <td>1/6</td>\n",
+       "      <td>1/3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Door 2</th>\n",
+       "      <td>1/3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1/3</td>\n",
+       "      <td>2/3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Door 3</th>\n",
+       "      <td>1/3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       prior likelihood unnorm posterior\n",
+       "Door 1   1/3        1/2    1/6       1/3\n",
+       "Door 2   1/3          1    1/3       2/3\n",
+       "Door 3   1/3          0      0         0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "update(table3)\n",
+    "table3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "- First, write down the hypotheses and the data.\n",
+    "\n",
+    "- Next, figure out the prior probabilities.\n",
+    "\n",
+    "- Finally, compute the likelihood of the data under each hypothesis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercisses"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.1: Suppose you have two coins in a box. One is a normal coin with heads on one side and tails on the other, and one is a trick coin with heads on both sides. You choose a coin at random and see that one of the sides is heads. What is the probability that you chose the trick coin?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
